# revng-security-fork

./: CMakeLists.txt  README.rst
include/revng/BasicAnalyses/: AdvancedValueInfo.h
include/revng/SecurityPass/: BackwardPropagationPass.h  CommonDefinitions.h  FilterAdditionalFunctionsPass.h  FunctionParamsUsagePass.h  InputGeneratorPass.h  LoopDependenciesPass.h  MaxStepsPass.h  RevngFunctionParamsPass.h  SecurityWrapperPass.h
include/revng/Support/: CommandLine.h  SecurityDefinitions.h
lib/: CMakeLists.txt
lib/SecurityPass/: BackwardPropagationPass.cpp  CMakeLists.txt  CommonDefinitions.cpp  FunctionParamsUsagePass.cpp  LoopDependenciesPass.cpp  MaxStepsPass.cpp  RevngFunctionParamsPass.cpp  SecurityWrapperPass.cpp
lib/Support/: CMakeLists.txt  CommandLine.cpp  SecurityDefinitions.cpp
scripts/: revng-security-analyzer  revng-security-lifter
tools/: CMakeLists.txt  strip_objdump_plt.sh
tools/revng-lift/: JumpTargetManager.cpp
tools/security-helpers/: CMakeLists.txt  analize.sh  lifting.sh
